--- a/austoinDemo/学习计划表.md
+++ b/austoinDemo/学习计划表.md
@@ -11,11 +11,11 @@
 | 阶段 | 总课程 | 已完成 | 进行中 | 待开始 |
 |-----|-------|-------|-------|-------|
 | 第一阶段：基础语法 | 6课 | 6课 | 0课 | 0课 |
-| 第二阶段：复合类型 | 2课 | 0课 | 0课 | 2课 |
+| 第二阶段：复合类型 | 2课 | 2课 | 0课 | 0课 |
 | 第三阶段：并发与错误处理 | 3课 | 0课 | 0课 | 3课 |
 | 第四阶段：Web开发与数据库 | 5课 | 0课 | 0课 | 5课 |
 | 第五阶段：网络编程与微服务 | 5课 | 0课 | 0课 | 5课 |
-| **总计** | **21课** | **6课** | **0课** | **15课** |
+| **总计** | **21课** | **8课** | **0课** | **13课** |
 
 ---
 
@@ -31,17 +31,27 @@
 | ✅ 4 | 条件语句 | `A-base/4.go` | 2026-02-06 | if、switch |
 | ✅ 5 | 循环语句 | `A-base/5.go` | 2026-02-06 | for、range、break、continue |
 | ✅ 6 | 函数 | `A-base/6.go` | 2026-02-06 | 函数定义、参数、返回值、递归 |
+| ✅ 7 | 数组、切片、映射 | `A-base/7.go` | 2026-02-06 | 数组、切片、Map |
+| ✅ 8 | 结构体和方法 | `A-base/8.go` | 2026-02-06 | 结构体、值接收者、指针接收者、接口 |
 
 ---
 
 ## 📋 待开始课程
 
-### 第二阶段：复合类型（2课）
+### 第二阶段：复合类型（已完成）
 
 | 序号 | 课程 | 教程文件 | 练习文件 | 核心概念 |
 |-----|------|---------|---------|---------|
-| ⏳ 7 | 数组、切片、映射 | `basic_syntax/07_arrays_slices_maps.go` | `A-base/7.go` | 数组、切片、Map |
-| ⏳ 8 | 结构体和方法 | `basic_syntax/08_structs_methods.go` | `A-base/8.go` | 结构体、方法接收者、接口 |
+| ✅ 7 | 数组、切片、映射 | `basic_syntax/07_arrays_slices_maps.go` | `A-base/7.go` | 数组、切片、Map |
+| ✅ 8 | 结构体和方法 | `basic_syntax/08_structs_methods.go` | `A-base/8.go` | 结构体、方法接收者、接口 |
+
+### 第三阶段：并发与错误处理（3课）
+
+| 序号 | 课程 | 教程文件 | 练习文件 | 核心概念 |
+|-----|------|---------|---------|---------|
+| ⏳ 9 | 并发编程 | `basic_syntax/09_concurrency.go` | `A-base/9.go` | Goroutine、Channel、WaitGroup |
+| ⏳ 10 | 错误处理 | `basic_syntax/10_error_handling.go` | `A-base/10.go` | error、panic、recover |
+| ⏳ 11 | 包和模块 | `basic_syntax/11_packages_modules.go` | `A-base/11.go` | go.mod、依赖管理、模块导入 |
 
 ### 第三阶段：并发与错误处理（3课）
 
@@ -151,9 +161,11 @@ GolangTutorial/
 - [x] [第4课：条件语句](./A-base/4.go)
 - [x] [第5课：循环语句](./A-base/5.go)
 - [x] [第6课：函数](./A-base/6.go)
+- [x] [第7课：数组、切片、映射](./A-base/7.go)
+- [x] [第8课：结构体和方法](./A-base/8.go)
 
 ### 下一课 ⏭️
-- [ ] [第7课：数组、切片、映射](../basic_syntax/07_arrays_slices_maps.go)
+- [ ] [第9课：并发编程](../basic_syntax/09_concurrency.go)
 
 ---
 
