--- a/austoinDemo/笔记.md
+++ b/austoinDemo/笔记.md
@@ -534,7 +534,282 @@ fmt.Printf("anything: %v\n", anything)  // [1 2 3]
 
 ---
 
-## 十、参考文档
+## 10、第9课并发编程（已学完）
+
+### 10.1 Goroutine 协程
+
+| 概念 | 说明 |
+|-----|------|
+| goroutine | Go语言实现的轻量级线程，由runtime管理 |
+| 初始栈大小 | 约2KB（线程约1MB） |
+| 创建方式 | `go 函数名()` 或 `go func(){}()` |
+
+```go
+// 1. 普通函数作为协程
+go say("Hello")
+
+// 2. 匿名协程
+go func() {
+    fmt.Println("匿名协程")
+}()
+
+// 注意：主程序退出时，所有协程会被强制终止
+time.Sleep(100 * time.Millisecond)
+```
+
+### 10.2 Channel 通道
+
+| 类型 | 说明 | 示例 |
+|-----|------|-----|
+| 无缓冲Channel | 发送和接收必须同时进行，否则阻塞 | `ch := make(chan int)` |
+| 有缓冲Channel | 可以暂存数据，缓冲区满时才阻塞 | `ch := make(chan int, 3)` |
+| 关闭Channel | `close(ch)`，接收方可用ok判断 | `v, ok := <-ch` |
+
+```go
+// 无缓冲Channel（发送接收必须同时）
+ch1 := make(chan string)
+go func() { ch1 <- "消息" }()
+msg := <-ch1
+
+// 有缓冲Channel（容量3）
+ch2 := make(chan int, 3)
+ch2 <- 1  // 不阻塞
+ch2 <- 2  // 不阻塞
+ch2 <- 3  // 不阻塞
+// ch2 <- 4  // 阻塞！缓冲区已满
+
+// 关闭 + range遍历
+ch3 := make(chan int, 5)
+go func() {
+    for i := 1; i <= 5; i++ { ch3 <- i }
+    close(ch3)
+}()
+for v := range ch3 {
+    fmt.Println(v)
+}
+```
+
+### 10.3 WaitGroup 等待组
+
+| 方法 | 作用 |
+|-----|------|
+| `Add(n)` | 增加等待计数 |
+| `Done()` | 减少计数（协程结束时调用） |
+| `Wait()` | 阻塞等待，直到计数变为0 |
+
+```go
+var wg sync.WaitGroup
+
+for i := 1; i <= 3; i++ {
+    wg.Add(1)
+    go func(id int) {
+        defer wg.Done()  // 确保执行
+        fmt.Printf("Task %d\n", id)
+    }(i)
+}
+
+wg.Wait()  // 等待所有协程完成
+```
+
+### 10.4 Mutex 互斥锁
+
+| 方法 | 作用 |
+|-----|------|
+| `Lock()` | 加锁，其他协程阻塞等待 |
+| `Unlock()` | 解锁 |
+
+```go
+var (
+    counter int
+    mutex   sync.Mutex
+)
+
+for i := 0; i < 1000; i++ {
+    go func() {
+        mutex.Lock()
+        counter++
+        mutex.Unlock()
+    }()
+}
+time.Sleep(100 * time.Millisecond)
+fmt.Println(counter)  // 1000
+```
+
+### 10.5 Select 选择器
+
+| 特性 | 说明 |
+|-----|------|
+| 多通道监听 | 同时等待多个Channel |
+| 超时控制 | `time.After(duration)` |
+| default | 都不就绪时执行（非阻塞） |
+
+```go
+ch5 := make(chan int)
+ch6 := make(chan int)
+
+go func() { ch5 <- 100 }()
+go func() { ch6 <- 200 }()
+
+select {
+case v1 := <-ch5: fmt.Println("ch5:", v1)
+case v2 := <-ch6: fmt.Println("ch6:", v2)
+}
+
+// 超时控制
+timeout := time.After(100 * time.Millisecond)
+done := make(chan bool)
+
+go func() {
+    time.Sleep(200 * time.Millisecond)
+    done <- true
+}()
+
+select {
+case <-done:   fmt.Println("完成")
+case <-timeout: fmt.Println("超时")
+}
+```
+
+### 10.6 完整代码结构
+
+```
+Lesson9()
+├── goroutineDemo()  // goroutine基础
+├── channelDemo()    // channel收发
+├── waitGroupDemo()  // waitgroup等待
+├── mutexDemo()      // 互斥锁
+└── selectDemo()     // select超时
+```
+
+### 10.7 用户代码亮点
+
+- ✅ 正确使用WaitGroup等待协程
+- ✅ 正确理解无缓冲/有缓冲Channel区别
+- ✅ 正确使用range遍历Channel
+- ✅ 正确使用Mutex保护共享变量
+- ✅ 正确使用select实现超时控制
+- ⚠️ 补充：defer在panic时也会执行
+
+---
+
+## 11、第10课错误处理（已学完）
+
+### 11.1 error 接口
+
+| 创建方式 | 说明 | 使用场景 |
+|---------|------|---------|
+| `errors.New()` | 创建简单错误 | 静态错误消息 |
+| `fmt.Errorf()` | 创建格式化错误 | 动态拼接错误信息（%s） |
+
+```go
+err1 := errors.New("文件不存在")
+err2 := fmt.Errorf("文件 %s 读取失败", filename)
+```
+
+### 11.2 函数返回错误
+
+**Go惯用法：** 函数返回多个值时，最后一个是 error，nil 表示没有错误。
+
+```go
+func divide(a, b float64) (float64, error) {
+    if b == 0 {
+        return 0, errors.New("除数不能为零")
+    }
+    return a / b, nil
+}
+
+result, err := divide(10, 0)
+if err != nil {
+    fmt.Println("错误:", err)
+}
+```
+
+### 11.3 自定义错误
+
+```go
+var ErrInvalidAge = errors.New("年龄无效")
+
+func validateAge(age int) (bool, error) {
+    if age < 0 || age > 150 {
+        return false, ErrInvalidAge
+    }
+    return true, nil
+}
+
+// errors.Is() 判断错误类型
+if _, err := validateAge(-1); errors.Is(err, ErrInvalidAge) {
+    fmt.Println("年龄验证失败")
+}
+```
+
+### 11.4 panic 恐慌
+
+| 特性 | 说明 |
+|-----|------|
+| 终止执行 | 当前函数立即停止 |
+| 传播方向 | 沿调用栈向上传播 |
+| 崩溃条件 | 没有recover捕获时程序退出 |
+
+```go
+panic("消息")  // 手动触发
+// 数组越界、空指针等运行时错误也会触发panic
+```
+
+### 11.5 recover 恢复
+
+**只能在 defer 函数中使用。**
+
+```go
+defer func() {
+    if r := recover(); r != nil {
+        fmt.Printf("捕获到panic: %v\n", r)
+    }
+}()
+```
+
+### 11.6 defer 执行顺序
+
+**栈结构：先定义的后执行。**
+
+```go
+defer fmt.Println("defer 1 (最后执行)")  // 第2个执行
+defer fmt.Println("defer 2 (其次执行)")  // 第1个执行
+```
+
+### 11.7 错误处理策略
+
+| 等级 | 类型 | 使用 | 示例 |
+|-----|------|-----|------|
+| L1 | 可预见错误 | 返回 error | 文件不存在、参数验证 |
+| L2 | 真正异常 | panic | 配置错误、空指针 |
+| L3 | 防止崩溃 | defer + recover | 捕获panic，记录日志 |
+
+### 11.8 完整代码结构
+
+```
+Lesson10()
+├── errorDemo()       // errors.New、fmt.Errorf
+├── divide()          // 返回 error
+├── validateAge()     // 自定义错误
+├── panicDemo()       // panic触发
+├── triggerPanic()   // panic传播
+├── recoverDemo()    // recover捕获
+├── safeFunction()   // defer+recover
+├── completeDemo()   // defer顺序
+├── nestedPanic()    // 嵌套panic
+├── checkErrorType() // errors.Is
+└── validateConfig() // 错误策略
+```
+
+### 11.9 用户代码亮点
+
+- ✅ errors.New 和 fmt.Errorf 创建错误
+- ✅ errors.Is 判断错误类型
+- ✅ panic 传播机制
+- ✅ defer + recover 捕获panic
+- ✅ defer 执行顺序（后进先出）
+- ✅ 区分 error 和 panic 使用场景
+- ✅ _, ok 检查 map 键是否存在
 
 - Go官方模块文档：https://golang.org/ref/mod
 - Go模块命令：https://golang.org/cmd/go/#hdr-Module_maintenance
