--- a/austoinDemo/学习计划表.md
+++ b/austoinDemo/学习计划表.md
@@ -12,10 +12,10 @@
 |-----|-------|-------|-------|-------|
 | 第一阶段：基础语法 | 6课 | 6课 | 0课 | 0课 |
 | 第二阶段：复合类型 | 2课 | 2课 | 0课 | 0课 |
-| 第三阶段：并发与错误处理 | 3课 | 0课 | 0课 | 3课 |
+| 第三阶段：并发与错误处理 | 3课 | 3课 | 0课 | 0课 |
 | 第四阶段：Web开发与数据库 | 5课 | 0课 | 0课 | 5课 |
 | 第五阶段：网络编程与微服务 | 5课 | 0课 | 0课 | 5课 |
-| **总计** | **21课** | **8课** | **0课** | **13课** |
+| **总计** | **21课** | **11课** | **0课** | **10课** |
 
 ---
 
@@ -33,32 +33,23 @@
 | ✅ 6 | 函数 | `A-base/6.go` | 2026-02-06 | 函数定义、参数、返回值、递归 |
 | ✅ 7 | 数组、切片、映射 | `A-base/7.go` | 2026-02-06 | 数组、切片、Map |
 | ✅ 8 | 结构体和方法 | `A-base/8.go` | 2026-02-06 | 结构体、值接收者、指针接收者、接口 |
+| ✅ 9 | 并发编程 | `A-base/9.go` | 2026-02-08 | Goroutine、Channel、WaitGroup、Mutex、select |
+| ✅ 10 | 错误处理 | `A-base/10.go` | 2026-02-08 | error、panic、recover |
+
+---
+
+## 📋 进行中课程
+
+（暂无）
 
 ---
 
 ## 📋 待开始课程
 
-### 第二阶段：复合类型（已完成）
+### 第三阶段：并发与错误处理（已完成3/3课）
 
 | 序号 | 课程 | 教程文件 | 练习文件 | 核心概念 |
 |-----|------|---------|---------|---------|
-| ✅ 7 | 数组、切片、映射 | `basic_syntax/07_arrays_slices_maps.go` | `A-base/7.go` | 数组、切片、Map |
-| ✅ 8 | 结构体和方法 | `basic_syntax/08_structs_methods.go` | `A-base/8.go` | 结构体、方法接收者、接口 |
-
-### 第三阶段：并发与错误处理（3课）
-
-| 序号 | 课程 | 教程文件 | 练习文件 | 核心概念 |
-|-----|------|---------|---------|---------|
-| ⏳ 9 | 并发编程 | `basic_syntax/09_concurrency.go` | `A-base/9.go` | Goroutine、Channel、WaitGroup |
-| ⏳ 10 | 错误处理 | `basic_syntax/10_error_handling.go` | `A-base/10.go` | error、panic、recover |
-| ⏳ 11 | 包和模块 | `basic_syntax/11_packages_modules.go` | `A-base/11.go` | go.mod、依赖管理、模块导入 |
-
-### 第三阶段：并发与错误处理（3课）
-
-| 序号 | 课程 | 教程文件 | 练习文件 | 核心概念 |
-|-----|------|---------|---------|---------|
-| ⏳ 9 | 并发编程 | `basic_syntax/09_concurrency.go` | `A-base/9.go` | Goroutine、Channel、WaitGroup |
-| ⏳ 10 | 错误处理 | `basic_syntax/10_error_handling.go` | `A-base/10.go` | error、panic、recover |
 | ⏳ 11 | 包和模块 | `basic_syntax/11_packages_modules.go` | `A-base/11.go` | go.mod、依赖管理、模块导入 |
 
 ### 第四阶段：Web开发与数据库（5课）
@@ -83,113 +74,14 @@
 
 ---
 
-## 📚 包和模块管理（必须掌握）
-
-### 核心概念
-
-#### 1. go.mod 和 go.sum
-
-| 文件 | 作用 | 生成命令 |
-|-----|------|---------|
-| `go.mod` | 声明模块名、版本、依赖 | `go mod init 模块名` |
-| `go.sum` | 依赖校验和（安全） | `go mod tidy` |
-
-#### 2. 包调用规则
-
-```
-同一个目录 → 同一包名 → 直接调用
-不同目录   → 不同包名 → 需要导入（import）
-```
-
-#### 3. 可见性规则
-
-```go
-func PublicFunc() {}    // 首字母大写 = 公开（其他包可访问）
-func privateFunc() {}   // 首字母小写 = 私有（其他包不可访问）
-```
-
-#### 4. 本地包调用（使用 replace）
-
-**根目录 go.mod**：
-```go
-module github.com/你的用户名/项目名
-
-replace 远程路径 => 本地路径
-```
-
-**main.go 导入**：
-```go
-import 别名 "远程路径"
-别名.公开函数()
-```
-
-#### 5. 远程仓库包调用
-
-```go
-import (
-    "github.com/gin-gonic/gin"  // 第三方库
-)
-
-go mod tidy  // 自动下载依赖
-```
-
----
-
-## 📁 练习文件目录规范
-
-```
-GolangTutorial/
-├── go.mod                    ← 根模块（只初始化一次）
-├── go.sum                    ← 自动生成
-├── austoinDemo/
-│   ├── main.go               ← 主入口
-│   └── A-base/               ← 练习包
-│       ├── 1.go              ← Lesson1()
-│       ├── 2.go              ← Lesson2()
-│       └── ...
-└── 其他教程目录...            ← 无go.mod，共享根模块
-```
-
----
-
 ## 🚀 快速导航
 
 ### 已完成 ✅
-- [x] [第1课：Hello World](./A-base/1.go)
-- [x] [第2课：变量声明](./A-base/2.go)
-- [x] [第3课：基本数据类型](./A-base/3.go)
-- [x] [第4课：条件语句](./A-base/4.go)
-- [x] [第5课：循环语句](./A-base/5.go)
-- [x] [第6课：函数](./A-base/6.go)
-- [x] [第7课：数组、切片、映射](./A-base/7.go)
-- [x] [第8课：结构体和方法](./A-base/8.go)
+- [x] [第9课：并发编程](./A-base/9.go)
+- [x] [第10课：错误处理](./A-base/10.go)
 
 ### 下一课 ⏭️
-- [ ] [第9课：并发编程](../basic_syntax/09_concurrency.go)
-
----
-
-## 💡 学习技巧
-
-1. **循序渐进**：按课程编号顺序学习，不要跳着看
-2. **动手实践**：每个例子都运行一遍，修改参数观察变化
-3. **阅读注释**：教程代码有详细中文注释
-4. **做笔记**：记录重点概念和常见错误
-5. **及时提问**：遇到问题立即询问
-
----
-
-## 📚 配套资源
-
-| 资源 | 位置 | 说明 |
-|-----|------|------|
-| 基础教程 | `basic_syntax/` | 11个基础语法文件 |
-| Web框架 | `web/` | Gin/Echo 示例 |
-| 数据库 | `database/` | SQL/GORM/Redis |
-| 网络编程 | `networking/` | HTTP/TCP/UDP |
-| 微服务 | `microservices/` | gRPC 示例 |
-| 测试示例 | `testing_example.go` | 单元测试 |
-| 详细文档 | `docs/` | 6个Markdown文档 |
+- [ ] [第11课：包和模块](../basic_syntax/11_packages_modules.go)
 
 ---
 
