--- a/austoinDemo/学习计划表.md
+++ b/austoinDemo/学习计划表.md
@@ -13,9 +13,9 @@
 | 第一阶段：基础语法 | 6课 | 6课 | 0课 | 0课 |
 | 第二阶段：复合类型 | 2课 | 2课 | 0课 | 0课 |
 | 第三阶段：并发与错误处理 | 3课 | 3课 | 0课 | 0课 |
-| 第四阶段：Web开发与数据库 | 5课 | 0课 | 0课 | 5课 |
+| 第四阶段：Web开发与数据库 | 5课 | 1课 | 0课 | 4课 |
 | 第五阶段：网络编程与微服务 | 5课 | 0课 | 0课 | 5课 |
-| **总计** | **21课** | **11课** | **0课** | **10课** |
+| **总计** | **21课** | **13课** | **0课** | **8课** |
 
 ---
 
@@ -35,6 +35,8 @@
 | ✅ 8 | 结构体和方法 | `A-base/8.go` | 2026-02-06 | 结构体、值接收者、指针接收者、接口 |
 | ✅ 9 | 并发编程 | `A-base/9.go` | 2026-02-08 | Goroutine、Channel、WaitGroup、Mutex、select |
 | ✅ 10 | 错误处理 | `A-base/10.go` | 2026-02-08 | error、panic、recover |
+| ✅ 11 | 包和模块 | `A-base/11.go` | 2026-02-08 | go.mod、依赖管理、模块导入 |
+| ✅ 12 | Gin框架 | `B-Gin_Echo_Sql_Gorm_Redis/12.go` | 2026-02-08 | 路由、中间件、参数绑定 |
 
 ---
 
@@ -45,12 +47,6 @@
 ---
 
 ## 📋 待开始课程
-
-### 第三阶段：并发与错误处理（已完成3/3课）
-
-| 序号 | 课程 | 教程文件 | 练习文件 | 核心概念 |
-|-----|------|---------|---------|---------|
-| ⏳ 11 | 包和模块 | `basic_syntax/11_packages_modules.go` | `A-base/11.go` | go.mod、依赖管理、模块导入 |
 
 ### 第四阶段：Web开发与数据库（5课）
 
@@ -79,9 +75,11 @@
 ### 已完成 ✅
 - [x] [第9课：并发编程](./A-base/9.go)
 - [x] [第10课：错误处理](./A-base/10.go)
+- [x] [第11课：包和模块](./A-base/11.go)
+- [x] [第12课：Gin框架](./B-Gin_Echo_Sql_Gorm_Redis/12.go)
 
 ### 下一课 ⏭️
-- [ ] [第11课：包和模块](../basic_syntax/11_packages_modules.go)
+- [ ] [第13课：Echo框架](../web/web_echo.go)
 
 ---
 
